# fastapi-amis-admin-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  Dockerfile  README.md  admisadmin.db  alembic.ini  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  sitemap.xml
about/: index.html
amis/types/: index.html
amis_admin/AdminApp/: index.html
amis_admin/AdminSite/: index.html
amis_admin/BaseAdmin/: index.html
amis_admin/FormAdmin/: index.html
amis_admin/ModelAction/: index.html
amis_admin/ModelAdmin/: index.html
amis_admin/PageAdmin/: index.html
amis_admin/PageSchemaAdmin/: index.html
amis_admin/RouterAdmin/: index.html
amis_admin/Settings/: index.html
amis_admin/TemplateAdmin/: index.html
apps/blog/: __init__.py  admin.py  apis.py  app.py  models.py
apps/demo/: admin.py
apps/demo/templates/: simple.html
backend/: alembic.ini  amisadmin.db  main.py  requirements.txt
backend/apps/blog/: __init__.py  admin.py  apis.py  events.py  models.py
backend/apps/demo/: __init__.py  admin.py
backend/apps/demo/templates/: element.html
backend/core/: __init__.py  adminsite.py  globals.py  settings.py
backend/migrations/: env.py
backend/migrations/versions/: 8caff16bb4b6_.py  bcd68ae939ea_add_url.py  c79e1785119e_init.py
core/: adminsite.py
extended/SQLModel/: index.html
extended/about/: index.html
extended/alembic/: index.html
fastapi_crud/BaseCrud/: index.html
fastapi_crud/RouterMixin/: index.html
fastapi_crud/SQLModelCrud/: index.html
migrations/: env.py
migrations/versions/: bcd68ae939ea_add_url.py  c79e1785119e_init.py
release/: index.html
scripts/: debug.sh  main.py  run.sh
search/: search_index.json
tutorials/advanced/AdminApp/: index.html
tutorials/advanced/_more/: index.html
tutorials/advanced/structure/: index.html
tutorials/basic/FormAdmin/: index.html
tutorials/basic/ModelAction/: index.html
tutorials/basic/ModelAdmin/: index.html
tutorials/basic/PageAdmin/: index.html
tutorials/basic/Settings/: index.html
tutorials/basic/TemplateAdmin/: index.html
tutorials/basic/_more/: index.html
tutorials/quickstart/: index.html
utils/db/: index.html
